fixed mob menu bug on small screens and about img proportions

--- a/src/index.css
+++ b/src/index.css
@@ -1040,12 +1040,21 @@ body::-webkit-scrollbar {
 
 @media only screen and (max-width: 376px) {
 
+  .mobileMenu{
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    padding-top: 30px;
+    background-color: var(--tsb-blue);
+    z-index: 3;
+  }
+  
   .mob-menu-text{
     font-size: 1.4em;
   }
 
   .mob-menu-option{
-    height: 11.5%;
+    height: 10.5%;
   }
 
   .sidebar-container{
@@ -1133,7 +1142,7 @@ body::-webkit-scrollbar {
 @media only screen and (max-width: 360px) {
 
   .about-img{
-    width: 75%;
+    width: 65%;
     height: 60%;
   }
 
